# lqrl-back

./: .env  .gitignore  Cargo.toml  Docker-compose.yml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
.cargo/: config.toml
.github/workflows/: production.yml  rust.yml
crates/libs/lib-auth/src/: config.rs
crates/libs/lib-auth/src/pwd/: error.rs  mod.rs
crates/libs/lib-auth/src/pwd/scheme/: error.rs  mod.rs  scheme_01.rs  scheme_02.rs
crates/libs/lib-auth/src/token/: error.rs  mod.rs
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/: lib.rs
crates/libs/lib-core/src/_dev_utils/: dev_db.rs  mod.rs
crates/libs/lib-core/src/core/: course.rs  error.rs  lesson.rs  mod.rs  user.rs
crates/libs/lib-core/src/ctx/: mod.rs
crates/libs/lib-core/src/interactors/: cron_job_exercise.rs  error.rs  exercise_checker.rs  exercise_validator.rs  img_file.rs  mod.rs  permission_manager.rs
crates/libs/lib-core/src/interactors/creator/: course.rs  exercise.rs  lesson.rs  mod.rs
crates/libs/lib-core/src/interactors/student/: course.rs  exercise.rs  lesson.rs
crates/libs/lib-core/src/interactors/user/: user.rs
crates/libs/lib-core/src/interfaces/: command_repository_manager.rs  course.rs  error.rs  exercise.rs  lesson.rs  mod.rs  user.rs
crates/libs/lib-core/src/model/: course.rs  error.rs  lesson.rs  mod.rs  user.rs  users_courses.rs
crates/libs/lib-core/src/models/: course.rs  exercise.rs  exercise_completion.rs  lesson.rs  lesson_progress.rs  mod.rs
crates/libs/lib-core/tests/: lesson.rs
crates/libs/lib-core/tests/common/: mod.rs  repository.rs  repository_manager.rs
crates/libs/lib-db/: Cargo.toml
crates/libs/lib-db/src/: lib.rs
crates/libs/lib-db/src/_dev_utils/: dev_db.rs  mod.rs
crates/libs/lib-db/src/base/: crud_fns.rs  idens.rs  macro_utils.rs  mod.rs  table_ref.rs  utils.rs
crates/libs/lib-db/src/command_repository/: course.rs  exercise.rs  exercise_completion.rs  lesson.rs  lesson_progress.rs  mod.rs  user.rs  users_courses.rs
crates/libs/lib-db/src/model/: course.rs  user.rs  users_courses.rs
crates/libs/lib-db/src/model/base/: crud_fns.rs
crates/libs/lib-db/src/query_repository/: course.rs  exercise.rs  exercise_completion.rs  lesson.rs  lesson_progress.rs  mod.rs  user.rs  users_courses.rs
crates/libs/lib-db/src/repository/: course.rs  error.rs  mod.rs  user.rs  users_courses.rs
crates/libs/lib-db/src/repository/base/: crud_fns.rs  utils.rs
crates/libs/lib-db/src/repository/store/: mod.rs
crates/libs/lib-db/src/repository/store/dbx/: error.rs  mod.rs
crates/libs/lib-db/src/store/: command_repository_manager.rs  db_manager.rs  error.rs  mod.rs  query_repository_manager.rs
crates/libs/lib-db/src/store/dbx/: error.rs  mod.rs
crates/libs/lib-utils/: Cargo.toml
crates/libs/lib-utils/src/: b64.rs  time.rs
crates/services/exercise_cron_job/: Cargo.toml
crates/services/exercise_cron_job/src/: main.rs
crates/services/web-server/: Cargo.toml
crates/services/web-server/examples/: quick_dev.rs
crates/services/web-server/src/: api_doc.rs  app_state.rs  error.rs  main.rs
crates/services/web-server/src/log/: mod.rs
crates/services/web-server/src/middleware/: mw_auth.rs  mw_req_stamp.rs  mw_res_map.rs
crates/services/web-server/src/middleware/log/: mod.rs
crates/services/web-server/src/routes/: mod.rs  routes_course.rs  routes_lesson.rs  routes_login.rs  routes_register.rs
crates/services/web-server/src/routes/creator/: course.rs  exercise.rs  lesson.rs  mod.rs
crates/services/web-server/src/routes/models/: course.rs  exercise.rs  exercise_completion.rs  lesson.rs  lesson_progress.rs  mod.rs  user.rs
crates/services/web-server/src/routes/student/: course.rs  exercise.rs  lesson.rs  lesson_progress.rs  mod.rs
crates/services/web-server/src/routes/user/: course.rs  exercise.rs  lesson.rs  login.rs  mod.rs  register.rs  user.rs
crates/services/web-server/src/routes/user_routes/: mod.rs  routes_login.rs  routes_register.rs  routes_user.rs
crates/services/web-server/src/web/: error.rs  file_upload.rs  mod.rs  mw_auth.rs  mw_res_map.rs  routes_course.rs  routes_login.rs  routes_register.rs
crates/services/web-server/src/web/middleware/: mod.rs  mw_auth.rs  mw_res_map.rs
crates/services/web-server/src/web/middleware/log/: mod.rs
crates/services/web-server/src/web/routes/: routes_course.rs  routes_login.rs  routes_register.rs
sql/dev_initial/: 01-create-schema.sql  02-dev-seed.sql
