[package]
name = "lib-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
lib-utils = { path = "../../libs/lib-utils"}

# -- Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

serde = { version = "1", features = ["derive"] }
serde_with = { workspace = true }

derive_more = { workspace = true }
typed-builder = "0.18.1"