[package]
name = "lib-db"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
# -- App Libs
lib-utils = { path = "../../libs/lib-utils"}
lib-auth = { path = "../../libs/lib-auth"}
lib-core = { path = "../../libs/lib-core"}
# -- Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.77"
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { workspace = true }
# -- Data
sqlx = { version = "0.7", features = [ "macros", "runtime-tokio", "postgres", "uuid" ] }
sea-query = "0.30"
sea-query-binder = { version = "0.5", features = ["sqlx-postgres", "with-uuid", "with-time", "with-json" ] }
modql = { workspace = true }
# -- Tracing
tracing = "0.1"
# -- Others
uuid = {version = "1", features = ["v4","fast-rng",]}
time = {version = "0.3", features = ["formatting", "parsing", "serde"]}
derive_more = { workspace = true }
typed-builder = "0.18.1"

[dev-dependencies]
serial_test = "3"
